# oww_trainer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/oww_trainer/: download.py  models.py  train.py  trainer.py
tests/: conftest.py
tests/acceptance/: test_wakeword.py
tests/unit/: test_acceptance_helpers.py  test_download.py  test_trainer.py
